[package]
name = "schismrs-mesh"
description = "A Rust toolkit for the SCHISM ocean model - mesh component"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
derive_builder = { version = "0.12.0", features = ["clippy"] }
log = "0.4.20"
ndarray = "0.15.6"
proj = { version = "0.27.2", features = ["reqwest"] }
reqwest = { version = "0.11.23", features = ["blocking"] }
tempfile = "3.9.0"
thiserror = "1.0.48"
tokio = { version = "1.29.1", features = ["full"] }
url = "2.5.0"

# [dev-dependencies]
# delaunator = "1.0.2"
# rstest = "0.18.2"
# tempfile = "3.6.0"

[build-dependencies]
vergen = { version = "8.2.4", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }

