[package]
name = "schismrs-hgrid"
description = "A Rust toolkit for the SCHISM ocean model - hgrid component"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
derive_builder = { version = "0.12.0", features = ["clippy"] }
gag = "1.0.0"
linked-hash-map = "0.5.6"
log = "0.4.20"
ndarray = "0.15.6"
proj = { version = "0.30.0", features = ["network"] }
reqwest = { version = "0.11.23", features = ["blocking"] }
tempfile = "3.9.0"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"

# [dev-dependencies]
# delaunator = "1.0.2"
# rstest = "0.18.2"
# tempfile = "3.6.0"

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }

[dev-dependencies]
delaunator = "1.0.2"

